--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -3945,7 +3945,7 @@
         "\n",
         "print(\"3. The estimation of pi is {}\".format(ans*4))\n"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3988,15 +3988,15 @@
         "ans1=ans2=0\n",
         "iterations = 4\n",
         "\n",
-        "for i in range(iterations):\n",
+        "for i in range(iterations): #atan(1/5)\n",
         "  ans1 += ((-1)**(i+2))*(1/(2*(i)+1)*((1/5)**(2*(i)+1)))\n",
         "\n",
-        "for i in range(iterations):\n",
+        "for i in range(iterations):   #atan(1/239)\n",
         "  ans2 += ((-1)**(i+2))*(1/(2*(i)+1)*((1/239)**(2*(i)+1)))\n",
         "\n",
         "print(\"It only takes {} iterations to come to the approximation {}\".format(iterations, 4*(4*ans1-ans2)))"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4043,7 +4043,7 @@
         "from mpmath import *\n",
         "print(mp)"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4079,7 +4079,7 @@
         "mp.dps = 50 # Let's try 50 digits precision to start.\n",
         "print(mp)"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4115,7 +4115,7 @@
       "source": [
         "sqrt(2)  # mpf(...) stands for an mp-float.  "
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4141,7 +4141,7 @@
       "source": [
         "type(sqrt(2)) # mpmath stores numbers in its own types!"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4167,7 +4167,7 @@
       "source": [
         "4*mp.atan(1) # mpmath has the arctan built in.  This should be pretty close to pi!"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4194,7 +4194,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ulLOs22VU5yZ",
-        "outputId": "d067bd07-56e6-4c46-8e05-08b24f563c68",
+        "outputId": "e035c742-f9fb-4268-b509-bdd84d61c1f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4204,30 +4204,57 @@
         "from mpmath import *\n",
         "mp.dps = 100\n",
         "\n",
-        "p = 4/mp.sqrt(2) #inscribed perimeter using mpmath sqrt() function\n",
-        "P = 4 #circumscribed perimeter\n",
-        "iterations = 164\n",
-        "for i in range(iterations): #archimedes method\n",
+        "p = 4/mp.sqrt(2) #p(2) --> inscribed perimeter\n",
+        "P = 4 #P(2) --> circumscribed perimeter\n",
+        "iterations_arch = 164\n",
+        "\n",
+        "for i in range(iterations_arch): #archimedes method\n",
         "  P = (2*p*P)/(p+P)\n",
         "  p = sqrt(p*P)\n",
         "\n",
-        "print(\"Approximation: {}\".format((p+P)/2))\n",
-        "print(\"Actual digits: {}\".format(pi))\n",
+        "print(\"Using math.pi : {}\".format(pi))\n",
+        "print(\"Archimedes way: {}\".format((p+P)/2))\n",
         "\n",
-        "print(\"Using the formula, I would need {} iterations to have pi precise up to 100 decimal digits.\".format(iterations))"
+        "ans1=ans2=mp.sqrt(0)\n",
+        "iterations_mach = 100 #number of iterations for machin's way\n",
+        "\n",
+        "for i in range(iterations_mach):\n",
+        "  ans1 += ((-1)**(i+2))*(1/(2*(i)+1)*((1/5)**(2*(i)+1)))\n",
+        "\n",
+        "for i in range(iterations_mach):\n",
+        "  ans2 += ((-1)**(i+2))*(1/(2*(i)+1)*((1/239)**(2*(i)+1)))\n",
+        "\n",
+        "print(\"Machin's way  : {}\".format(4*(4*ans1-ans2))) #Machin's way using iterations\n",
+        "print(\"Using mp.atan : {}\".format(4*(4*mp.atan(1/5)-mp.atan(1/239)))) #Machin's way using mpmath's atan function\n",
+        "print(\"Using Archimedes formula, I would need {} iterations to have pi precise up to 100 decimal digits.\".format(iterations_arch))\n",
+        "print(\"\\nArchimedes formula is a magnitide faster and more accurate than Machin's formula. Both my code and the built in mpmath \\nfunction only show pi up to 15 decimal place accuracy; while Archimedes can show 100 decimal place accuracy.\")"
       ],
-      "execution_count": 113,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Approximation: 3.141592653589793238462643383279502884197169399375105820974944592307816406286208998628034825342117068\n",
-            "Actual digits: 3.141592653589793238462643383279502884197169399375105820974944592307816406286208998628034825342117068\n",
-            "Using the formula, I would need 164 iterations to have pi precise up to 100 decimal digits.\n"
+            "Using math.pi : 3.141592653589793238462643383279502884197169399375105820974944592307816406286208998628034825342117068\n",
+            "Archimedes way: 3.141592653589793238462643383279502884197169399375105820974944592307816406286208998628034825342117068\n",
+            "Machin's way  : 3.141592653589793412401642901891767201485813820484162957161241685232830634356206609760201879934686318\n",
+            "Using mp.atan : 3.141592653589793410703295404147997014898148250028739392746571369685187783716405306065579005139221357\n",
+            "Using Archimedes formula, I would need 164 iterations to have pi precise up to 100 decimal digits.\n",
+            "\n",
+            "Archimedes formula is a magnitide faster and more accurate than Machin's formula. Both my code and the built in mpmath \n",
+            "function only show pi up to 15 decimal place accuracy; while Archimedes can show 100 decimal place accuracy.\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9iyJAg8YYMQr"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
