--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -4194,7 +4194,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ulLOs22VU5yZ",
-        "outputId": "e035c742-f9fb-4268-b509-bdd84d61c1f4",
+        "outputId": "fae3b73f-f881-416e-ff08-bb6a5179e93d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4227,9 +4227,9 @@
         "print(\"Machin's way  : {}\".format(4*(4*ans1-ans2))) #Machin's way using iterations\n",
         "print(\"Using mp.atan : {}\".format(4*(4*mp.atan(1/5)-mp.atan(1/239)))) #Machin's way using mpmath's atan function\n",
         "print(\"Using Archimedes formula, I would need {} iterations to have pi precise up to 100 decimal digits.\".format(iterations_arch))\n",
-        "print(\"\\nArchimedes formula is a magnitide faster and more accurate than Machin's formula. Both my code and the built in mpmath \\nfunction only show pi up to 15 decimal place accuracy; while Archimedes can show 100 decimal place accuracy.\")"
+        "print(\"\\nArchimedes formula is a magnitide faster and more accurate than Machin's formula. Both my code and the built in mpmath \\nfunction only show pi up to 15 decimal place accuracy for Machin's formula; while Archimedes can show 100 decimal place \\naccuracy.\")"
       ],
-      "execution_count": 37,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -4242,19 +4242,11 @@
             "Using Archimedes formula, I would need 164 iterations to have pi precise up to 100 decimal digits.\n",
             "\n",
             "Archimedes formula is a magnitide faster and more accurate than Machin's formula. Both my code and the built in mpmath \n",
-            "function only show pi up to 15 decimal place accuracy; while Archimedes can show 100 decimal place accuracy.\n"
+            "function only show pi up to 15 decimal place accuracy for Machin's formula; while Archimedes can show 100 decimal place \n",
+            "accuracy.\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "9iyJAg8YYMQr"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
