--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -4194,7 +4194,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ulLOs22VU5yZ",
-        "outputId": "fae3b73f-f881-416e-ff08-bb6a5179e93d",
+        "outputId": "6e74593b-4837-4ac5-f735-6b7e1dd2ee96",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4227,9 +4227,9 @@
         "print(\"Machin's way  : {}\".format(4*(4*ans1-ans2))) #Machin's way using iterations\n",
         "print(\"Using mp.atan : {}\".format(4*(4*mp.atan(1/5)-mp.atan(1/239)))) #Machin's way using mpmath's atan function\n",
         "print(\"Using Archimedes formula, I would need {} iterations to have pi precise up to 100 decimal digits.\".format(iterations_arch))\n",
-        "print(\"\\nArchimedes formula is a magnitide faster and more accurate than Machin's formula. Both my code and the built in mpmath \\nfunction only show pi up to 15 decimal place accuracy for Machin's formula; while Archimedes can show 100 decimal place \\naccuracy.\")"
+        "print(\"\\nArchimedes formula is a magnitude faster and more accurate than Machin's formula. Both my code and the built in mpmath \\nfunction only show pi up to 15 decimal place accuracy for Machin's formula; while Archimedes can show 100 decimal place \\naccuracy.\")"
       ],
-      "execution_count": 39,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -4241,12 +4241,21 @@
             "Using mp.atan : 3.141592653589793410703295404147997014898148250028739392746571369685187783716405306065579005139221357\n",
             "Using Archimedes formula, I would need 164 iterations to have pi precise up to 100 decimal digits.\n",
             "\n",
-            "Archimedes formula is a magnitide faster and more accurate than Machin's formula. Both my code and the built in mpmath \n",
+            "Archimedes formula is a magnitude faster and more accurate than Machin's formula. Both my code and the built in mpmath \n",
             "function only show pi up to 15 decimal place accuracy for Machin's formula; while Archimedes can show 100 decimal place \n",
             "accuracy.\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Rhx8hea8idQE"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
