--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -3815,7 +3815,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "PoGqUlqoU5yY",
-        "outputId": "113fbf19-461b-45c1-9e8b-7d1d2ac72a7c",
+        "outputId": "0bc54df1-3a31-4129-95a8-cee671b1f99f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3831,7 +3831,7 @@
         "\n",
         "print(g)"
       ],
-      "execution_count": null,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
@@ -3854,7 +3854,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "I've found that the approximation seems to get closer to the actual square root incredible fast. Even when starting at a large guess of 120 using only 10 iterations, the answer gets within .000000001 precison of the actual root. This is something that I find to be eyebrow raising for such an incredibly simple calculation. The idea that this irrational number can be represented with just a few lines of code and not much processing is eye opening."
+        "I've found that the approximation seems to get closer to the actual square root incredible fast. Even when starting at a large guess of 120 using only 10 iterations, the answer gets within .000000001 precison of the actual root. This is something that I find to be eyebrow raising for such an incredibly simple calculation. The idea that this irrational number can be represented with just a few lines of code and not much processing is eye opening.\n",
+        "\n",
+        "The average function can be better approximated if we were to change the domain of the guess g. For any square root we want to find for X, we will have the domain be a guess that is a perfect square so that g$\\cdot$g < X. By changing the allowed domain, this will yield a faster more accurate result when performing iterations of the average formula."
       ],
       "metadata": {
         "id": "FvTHVgsx6yXn"
@@ -3877,7 +3879,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "cH0ApCftU5yY",
-        "outputId": "8bcd4a7a-35d9-4aeb-fbe9-4d5fef477501",
+        "outputId": "006d0b6e-c273-43b8-fcf7-d9a5a95d8c59",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3887,19 +3889,24 @@
         "import math\n",
         "x = 1\n",
         "e = 1\n",
+        "terms=17\n",
         "\n",
-        "for i in range(100):\n",
+        "for i in range(terms):\n",
         "  e += (math.factorial(i+1)**(-1))*(x**(i+1))\n",
         "  \n",
-        "print(e)"
+        "print(\"Using math.e: {}\".format(math.e))\n",
+        "print(\"Using loop  : {}\".format(e))\n",
+        "print(\"{} terms are necessary before the float stabilizes.\".format(terms))"
       ],
-      "execution_count": null,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2.7182818284590455\n"
+            "Using math.e: 2.718281828459045\n",
+            "Using loop  : 2.7182818284590455\n",
+            "17 terms are necessary before the float stabilizes.\n"
           ]
         }
       ]
