--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -297,13 +297,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "msOx7ga_U5yF"
+        "id": "msOx7ga_U5yF",
+        "outputId": "37bbf4cc-0e23-4697-d114-cd7f49a842d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "-12 // 5  # What will this output?  Guess before evaluating!"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 100
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -925,26 +940,34 @@
       "cell_type": "code",
       "metadata": {
         "id": "9P7roKZgU5yJ",
-        "outputId": "9f350c1a-34ad-4962-93c9-063729db57de",
+        "outputId": "ec042c89-5843-47e4-b0d9-424ed2216d6e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "7+5+8.0#  An empty cell.  Have fun!\n",
-        "#  Try operating on ints, floats, and strings, with different operations.  Which ones work?  How?"
+        "#  An empty cell.  Have fun!\n",
+        "#  Try operating on ints, floats, and strings, with different operations.  Which ones work?  How?\n",
+        "\n",
+        "print(7+5+8.0)\n",
+        "print(8.5+2.4)\n",
+        "print('H'+'i')\n",
+        "\n",
+        "print(\"The program works when operating any combination of floats an integers. The program also works when adding (or concatenating) \\nstrings with strings. The program cannot do operations between numbers (ints and floats) with strings (plan text) when that \\noperation is addition, subtraction or division. However it can multiply a string several times.\")"
       ],
-      "execution_count": null,
+      "execution_count": 110,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "20.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 30
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20.0\n",
+            "10.9\n",
+            "Hi\n",
+            "The program works when operating any combination of floats an integers. The program also works when adding (or concatenating) \n",
+            "strings with strings. The program cannot do operations between numbers (ints and floats) with strings (plan text) when that \n",
+            "operation is addition, subtraction or division. However it can multiply a string several times.\n"
+          ]
         }
       ]
     },
@@ -1058,29 +1081,31 @@
       "cell_type": "code",
       "metadata": {
         "id": "fAxwL5O3U5yJ",
-        "outputId": "000b553a-ad70-478d-8fb2-96f029eaef7e",
+        "outputId": "7ba3b6d7-8878-46a1-c9ac-151e640ef032",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
       "source": [
-        "32*\"hi\"#  Practice cell\n"
+        "#  Practice cell\n",
+        "\n",
+        "100*'A'\n"
       ],
-      "execution_count": null,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'hihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihihi'"
+              "'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 106
         }
       ]
     },
@@ -1214,25 +1239,26 @@
       "cell_type": "code",
       "metadata": {
         "id": "MtmwQzLgU5yL",
-        "outputId": "c6099567-6936-41a8-e9d9-7b78482ad5ac",
+        "outputId": "02237d4e-4e32-4305-809a-63e77051d5f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "2**8#  An empty cell.  Have fun!\n"
+        "#  An empty cell.  Have fun!\n",
+        "\n",
+        "print(2**8)\n",
+        "print(1e+5) #1 x 10^5\n"
       ],
-      "execution_count": null,
+      "execution_count": 112,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "256"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 39
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "256\n",
+            "100000.0\n"
+          ]
         }
       ]
     },
@@ -3831,7 +3857,7 @@
         "\n",
         "print(g)"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3898,7 +3924,7 @@
         "print(\"Using loop  : {}\".format(e))\n",
         "print(\"{} terms are necessary before the float stabilizes.\".format(terms))"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3952,7 +3978,7 @@
         "\n",
         "print(\"3. The estimation of pi is {}\".format(ans*4))\n"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4236,7 +4262,7 @@
         "print(\"Using Archimedes formula, I would need {} iterations to have pi precise up to 100 decimal digits.\".format(iterations_arch))\n",
         "print(\"\\nArchimedes formula is a magnitude faster and more accurate than Machin's formula. Both my code and the built in mpmath \\nfunction only show pi up to 15 decimal place accuracy for Machin's formula; while Archimedes can show 100 decimal place \\naccuracy.\")"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
