--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -298,10 +298,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "msOx7ga_U5yF",
-        "outputId": "37bbf4cc-0e23-4697-d114-cd7f49a842d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "37bbf4cc-0e23-4697-d114-cd7f49a842d7"
       },
       "source": [
         "-12 // 5  # What will this output?  Guess before evaluating!"
@@ -1302,7 +1302,7 @@
         "\n",
         "3. Multiplication is treated depending on the variable types that are given. An integer multiplied by another integer will yield an integer. A float multiplied by another float will yield a float (or decimal).\n",
         "\n",
-        "4. 100 is an integer. 100.0 is a float."
+        "4. For python an integer is a while number, while a float is a decimal number that's stored. For example, 100 is a stored integer, while 100.0 is stored a float (notice the appended '.0')."
       ]
     },
     {
@@ -1598,25 +1598,26 @@
       "cell_type": "code",
       "metadata": {
         "id": "PGlksxncU5yN",
-        "outputId": "f4c9943c-379d-472a-904d-c16684099d95",
+        "outputId": "3d1b5232-6411-4c6d-8447-65ba0bc72f82",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "3==2#  Write your code here.\n"
+        "#  Write your code here.\n",
+        "\n",
+        "print((23**32)>(32**23))\n",
+        "print(\"23**32 is larger than 32**23.\")\n"
       ],
-      "execution_count": null,
+      "execution_count": 116,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 49
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "23**32 is larger than 32**23.\n"
+          ]
         }
       ]
     },
@@ -1703,25 +1704,26 @@
       "cell_type": "code",
       "metadata": {
         "id": "LPqBN_VlU5yN",
-        "outputId": "478f0aa0-4d1b-49d9-f076-035b326af23c",
+        "outputId": "c5f9ba4b-af09-4631-ab17-49bf29fe2827",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "1234567890%3==0 # Your code goes here.\n"
+        " # Your code goes here.\n",
+        "\n",
+        " print(1234567890%3==0)\n",
+        " print(\"3 divides 1234567890.\")\n"
       ],
-      "execution_count": null,
+      "execution_count": 117,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "3 divides 1234567890.\n"
+          ]
         }
       ]
     },
