--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -2198,9 +2198,9 @@
         "\n",
         "1. I didn't memorize the truth table, but I can easily find the answer between two or more truths using and/or connectives. For example True and False must equal False since the connective 'and' implies both are needing to be true. This is the same idea that's used in logic gates. Likewise for True or False, where only (at least) one of the statements of the connective 'or' needs to be true in order the statement to be true.\n",
         "\n",
-        "2. An easy way to remember the truth table is to take the phrases and/or literally. For 'and': two statements yield a true result if and only if the initial two statements are true. For 'or': wo statements yield a true result if and only if any one (or both) of the initial statements is/are true.\n",
+        "2. An easy way to remember the truth table is to take the phrases and/or literally. For 'and': two statements yield a true result if and only if the initial two statements are true. For 'or': wo statements yield a true result if and only if any one (or both) of the initial statements is/are true. An example in standard english could be finding the prerequisites for a certain class C. If the prerequisite for class C states the student needs to take class A **or** class B, then that student only needs to take one of the classes *at minimum*. Otherwise, if the prerequisites say that student needs class A **and** class B in order to take class C, then that student must take *both* required courses.\n",
         "\n",
-        "3. I would check if the following is true: (2349872348723%7==0) and (2349872348723%!=0)\n",
+        "3. I would check if the following is true: (2349872348723%7==0) and (2349872348723%11!=0)\n",
         "\n",
         "4. 'Not' is the highest order of operation, with 'and' being second and 'or' being of least priority.\n",
         "\n",
