--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -2204,32 +2204,32 @@
         "\n",
         "4. 'Not' is the highest order of operation, with 'and' being second and 'or' being of least priority.\n",
         "\n",
-        "5. An xor gate could be given as the following $\\neg$($\\neg$A$\\vee$(A$\\wedge$B)) $\\vee$ $\\neg$($\\neg$B$\\vee$(A$\\wedge$B))."
+        "5. An xor gate could be given as the following: $\\neg$((A$\\wedge$B)$\\vee$($\\neg$A$\\wedge$$\\neg$B)) . Another example: $\\neg$($\\neg$A$\\vee$(A$\\wedge$B)) $\\vee$ $\\neg$($\\neg$B$\\vee$(A$\\wedge$B))."
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "1 and 0 or not 1 and 0 #example"
+        " #example\n",
+        " print(1 and 0 or not 1 and 0)\n",
+        " print(not 0 and not 0)"
       ],
       "metadata": {
         "id": "ipGaHHyH0p63",
-        "outputId": "5e134103-76cd-4088-9b78-c310700241f6",
+        "outputId": "3c11e819-f285-454b-87ef-9655c3d3e6c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 119,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 69
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n"
+          ]
         }
       ]
     },
