--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -506,15 +506,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "Rc5Lv9wLU5yH",
-        "outputId": "a773f648-98b5-4a4b-821e-619667acbeeb",
+        "outputId": "20dd6fe2-35bf-45dc-ecee-ae6a39553462",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "(5*5)+6*(3+1) #An empty cell.  Have fun!\n"
+        "#An empty cell.  Have fun!\n",
+        "(5*5)+6*(3+1) \n"
       ],
-      "execution_count": null,
+      "execution_count": 135,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -524,7 +525,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 135
         }
       ]
     },
@@ -1239,7 +1240,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "MtmwQzLgU5yL",
-        "outputId": "02237d4e-4e32-4305-809a-63e77051d5f7",
+        "outputId": "fb064d1c-9a21-4e01-cb82-d7514cffa4ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1247,16 +1248,16 @@
       "source": [
         "#  An empty cell.  Have fun!\n",
         "\n",
-        "print(2**8)\n",
+        "print(2.0**8)\n",
         "print(1e+5) #1 x 10^5\n"
       ],
-      "execution_count": 112,
+      "execution_count": 136,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "256\n",
+            "256.0\n",
             "100000.0\n"
           ]
         }
