--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -306,7 +306,7 @@
       "source": [
         "-12 // 5  # What will this output?  Guess before evaluating!"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -515,7 +515,7 @@
         "#An empty cell.  Have fun!\n",
         "(5*5)+6*(3+1) \n"
       ],
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -956,7 +956,7 @@
         "\n",
         "print(\"The program works when operating any combination of floats an integers. The program also works when adding (or concatenating) \\nstrings with strings. The program cannot do operations between numbers (ints and floats) with strings (plan text) when that \\noperation is addition, subtraction or division. However it can multiply a string several times.\")"
       ],
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1093,7 +1093,7 @@
         "\n",
         "100*'A'\n"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1251,7 +1251,7 @@
         "print(2.0**8)\n",
         "print(1e+5) #1 x 10^5\n"
       ],
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1610,7 +1610,7 @@
         "print((23**32)>(32**23))\n",
         "print(\"23**32 is larger than 32**23.\")\n"
       ],
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1716,7 +1716,7 @@
         " print(1234567890%3==0)\n",
         " print(\"3 divides 1234567890.\")\n"
       ],
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2059,15 +2059,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "nD-RgY0CU5yP",
-        "outputId": "7955ab59-377c-424e-8e9c-64e59290d5fd",
+        "outputId": "a766636f-8850-47f4-d8e9-ba33bfc08173",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "-5*-3*-2 / 2 < 0# Experiment here.\n"
+        "not not -5*-3*-2 / 2 < 0# Experiment here.\n"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2077,7 +2077,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 66
+          "execution_count": 2
         }
       ]
     },
@@ -2197,9 +2197,9 @@
         "\n",
         "(Edit here to give solutions to the exercises)\n",
         "\n",
-        "1. I didn't memorize the truth table, but I can easily find the answer between two or more truths using and/or connectives. For example True and False must equal False since the connective 'and' implies both are needing to be true. This is the same idea that's used in logic gates. Likewise for True or False, where only (at least) one of the statements of the connective 'or' needs to be true in order the statement to be true.\n",
+        "1. I didn't memorize the truth table, but I can easily find the answer between two or more boolean statements using and/or connectives. For example True and False must equal False since the connective 'and' implies both are needing to be true. This is the same idea that's used in logic gates. Likewise for True or False, where only (at least) one of the statements of the connective 'or' needs to be true in order the statement to be true.\n",
         "\n",
-        "2. An easy way to remember the truth table is to take the phrases and/or literally. For 'and': two statements yield a true result if and only if the initial two statements are true. For 'or': wo statements yield a true result if and only if any one (or both) of the initial statements is/are true. An example in standard english could be finding the prerequisites for a certain class C. If the prerequisite for class C states the student needs to take class A **or** class B, then that student only needs to take one of the classes *at minimum*. Otherwise, if the prerequisites say that student needs class A **and** class B in order to take class C, then that student must take *both* required courses.\n",
+        "2. An easy way to remember the truth table is to take the phrases and/or literally. For 'and': two statements yield a true result if and only if the initial two statements are true. For 'or': two statements yield a true result if and only if any one (or both) of the initial statements is/are true. An example in standard english could be finding the prerequisites for a certain class C. If the prerequisite for class C states the student needs to take class A **or** class B, then that student only needs to take one of the classes *at minimum*. Otherwise, if the prerequisites say that student needs class A **and** class B in order to take class C, then that student must take *both* required courses.\n",
         "\n",
         "3. I would check if the following is true: (2349872348723%7==0) and (2349872348723%11!=0)\n",
         "\n",
@@ -2212,22 +2212,24 @@
       "cell_type": "code",
       "source": [
         " #example\n",
+        " print(True or False)\n",
         " print(1 and 0 or not 1 and 0)\n",
         " print(not 0 and not 0)"
       ],
       "metadata": {
         "id": "ipGaHHyH0p63",
-        "outputId": "3c11e819-f285-454b-87ef-9655c3d3e6c3",
+        "outputId": "d4382caa-0d5c-4f25-8491-323d3240b4e0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 119,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "True\n",
             "False\n",
             "True\n"
           ]
@@ -2260,7 +2262,7 @@
       "source": [
         "e = 2.71828"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -2345,14 +2347,14 @@
       "source": [
         "my_number = 17"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "FitPq8UNU5yQ",
-        "outputId": "429ec5e2-5926-4c81-d197-0c598c6257ea",
+        "outputId": "50164587-4c5d-4121-cba0-f01bf3cd12ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2360,7 +2362,7 @@
       "source": [
         "my_number < 23"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2370,7 +2372,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 13
         }
       ]
     },
@@ -2391,7 +2393,7 @@
       "source": [
         "my_number = 3.14"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -3778,7 +3780,7 @@
         "  C = (pi**4)/z\n",
         "print(\"7. C is {}.\".format(int(C//1)))\n"
       ],
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4265,7 +4267,7 @@
         "print(\"Using Archimedes formula, I would need {} iterations to have pi precise up to 100 decimal digits.\".format(iterations_arch))\n",
         "print(\"\\nArchimedes formula is a magnitude faster and more accurate than Machin's formula. Both my code and the built in mpmath \\nfunction only show pi up to 15 decimal place accuracy for Machin's formula; while Archimedes can show 100 decimal place \\naccuracy.\")"
       ],
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
