--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -1599,7 +1599,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "PGlksxncU5yN",
-        "outputId": "3d1b5232-6411-4c6d-8447-65ba0bc72f82",
+        "outputId": "238ae8f6-aed8-41f0-c562-d6cedff1c3a4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1607,16 +1607,17 @@
       "source": [
         "#  Write your code here.\n",
         "\n",
-        "print((23**32)>(32**23))\n",
-        "print(\"23**32 is larger than 32**23.\")\n"
+        "if (23**32)>(32**23):\n",
+        "  print(\"23**32 is larger than 32**23.\")\n",
+        "elif (23**32)<(32**23):\n",
+        "  print(\"32**23 is larger than 23**32.\")\n"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "True\n",
             "23**32 is larger than 32**23.\n"
           ]
         }
@@ -1705,7 +1706,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "LPqBN_VlU5yN",
-        "outputId": "c5f9ba4b-af09-4631-ab17-49bf29fe2827",
+        "outputId": "dd979547-9a25-4603-c0f1-0a3d33797c26",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1713,16 +1714,17 @@
       "source": [
         " # Your code goes here.\n",
         "\n",
-        " print(1234567890%3==0)\n",
-        " print(\"3 divides 1234567890.\")\n"
+        "if (1234567890%3==0):\n",
+        "  print(\"3 divides 1234567890.\")\n",
+        "else:\n",
+        "  print(\"3 does not divide 1234567890.\")\n"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "True\n",
             "3 divides 1234567890.\n"
           ]
         }
@@ -2218,12 +2220,12 @@
       ],
       "metadata": {
         "id": "ipGaHHyH0p63",
-        "outputId": "d4382caa-0d5c-4f25-8491-323d3240b4e0",
+        "outputId": "bb2be653-8b5a-4ae7-87a1-cc14bb76fe3c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -2550,7 +2552,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "$\\frac{4 \\pi^2 r^3}{G t^2} = M $"
+        "Solution to find M will be: $M = \\frac{4 \\pi^2 r^3}{G t^2} $"
       ],
       "metadata": {
         "id": "oVxYKtb3oVlw"
