--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -1297,13 +1297,13 @@
       "source": [
         "Double-click this text cell to edit it, and answer the exercises.  This **may be graded**, so please complete all questions!  Write in clear, complete, and concise sentences.\n",
         "\n",
-        "1. int --> integer, float --> decimal, tuple --> perminant array values, array --> collection of values, string --> plain text.\n",
+        "1. int --> integer; float --> decimal; tuple --> perminant array values; array --> collection of values; string --> plain text.\n",
         "\n",
         "2. Division is interpreted as a float. For example, if dividing an integer by another integer, it will yield a float. Likewise for floats dividing floats or any combination of the two.\n",
         "\n",
-        "3. Multiplication is treated depending on the variable types that are given. An integer multiplied by another integer will yield an integer. A float multiplied by another float will yield a float (or decimal).\n",
+        "3. Multiplication is treated depending on the variable types that are given. An integer multiplied by another integer will yield an integer. A float multiplied by another float will yield a float (or decimal). An integer multiplied by a float will yield a float.\n",
         "\n",
-        "4. For python an integer is a while number, while a float is a decimal number that's stored. For example, 100 is a stored integer, while 100.0 is stored a float (notice the appended '.0')."
+        "4. For python an integer is a whole number, while a float is a decimal number that's stored. For example, 100 is a stored integer, while 100.0 is stored a float (notice the appended '.0')."
       ]
     },
     {
