--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -2215,24 +2215,24 @@
       "source": [
         " #example\n",
         " print(True or False)\n",
-        " print(1 and 0 or not 1 and 0)\n",
+        " print(True and False or not False and True)\n",
         " print(not 0 and not 0)"
       ],
       "metadata": {
         "id": "ipGaHHyH0p63",
-        "outputId": "bb2be653-8b5a-4ae7-87a1-cc14bb76fe3c",
+        "outputId": "bc660f91-b231-48a9-ffea-f9a1957dcda4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "True\n",
-            "False\n",
+            "True\n",
             "True\n"
           ]
         }
