--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -4234,7 +4234,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ulLOs22VU5yZ",
-        "outputId": "52427e30-4497-46fe-e416-50efa940d857",
+        "outputId": "408dca91-53b3-483f-e58c-1be221bc439d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -4267,9 +4267,9 @@
         "print(\"Machin's way  : {}\".format(4*(4*ans1-ans2))) #Machin's way using iterations\n",
         "print(\"Using mp.atan : {}\".format(4*(4*mp.atan(1/5)-mp.atan(1/239)))) #Machin's way using mpmath's atan function\n",
         "print(\"Using Archimedes formula, I would need {} iterations to have pi precise up to 100 decimal digits.\".format(iterations_arch))\n",
-        "print(\"\\nArchimedes formula is a magnitude faster and more accurate than Machin's formula. Both my code and the built in mpmath \\nfunction only show pi up to 15 decimal place accuracy for Machin's formula; while Archimedes can show 100 decimal place \\naccuracy.\")"
+        "print(\"\\nArchimedes formula is a magnitude faster and more accurate than Machin's formula. Both my code and the built in mpmath \\nfunction only show pi up to 15 decimal place accuracy for Machin's formula; while Archimedes can show 100 decimal place \\naccuracy. In other words, if Machin's formula is an exact approximation of pi, then the formula may be too much for a \\ncomputer's hardware to handle.\")"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -4283,7 +4283,8 @@
             "\n",
             "Archimedes formula is a magnitude faster and more accurate than Machin's formula. Both my code and the built in mpmath \n",
             "function only show pi up to 15 decimal place accuracy for Machin's formula; while Archimedes can show 100 decimal place \n",
-            "accuracy.\n"
+            "accuracy. In other words, if Machin's formula is an exact approximation of pi, then the formula may be too much for a \n",
+            "computer's hardware to handle.\n"
           ]
         }
       ]
