--- a/P4M_Notebook_2.ipynb
+++ b/P4M_Notebook_2.ipynb
@@ -102,10 +102,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "6ZYvlyCYuXdl",
-        "outputId": "c2cc67d0-80e2-4917-db26-373ff6f7fafc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c2cc67d0-80e2-4917-db26-373ff6f7fafc"
       },
       "source": [
         "dis(square)"
@@ -144,10 +144,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "J1Drx8OauXdm",
-        "outputId": "27e85ff1-733c-4f72-8d7b-20e5953f08de",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "27e85ff1-733c-4f72-8d7b-20e5953f08de"
       },
       "source": [
         "square(12)"
@@ -170,10 +170,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "RPfYsUfAuXdm",
-        "outputId": "15bcbaf2-4bcf-45ef-bde7-d88265ac3d8f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "15bcbaf2-4bcf-45ef-bde7-d88265ac3d8f"
       },
       "source": [
         "square(1.5)"
@@ -251,10 +251,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "44kJtTHJuXdn",
-        "outputId": "c9f98ed1-b571-46e7-a38e-77ef183bbb20",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c9f98ed1-b571-46e7-a38e-77ef183bbb20"
       },
       "source": [
         "dis(display_divmod)"
@@ -305,10 +305,10 @@
       "metadata": {
         "scrolled": true,
         "id": "-5N5Px0XuXdn",
-        "outputId": "7d4b61ce-df2f-4398-eab2-711050ba92a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7d4b61ce-df2f-4398-eab2-711050ba92a5"
       },
       "source": [
         "display_divmod(23,5)"
@@ -341,10 +341,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "qYo13qoyuXdn",
-        "outputId": "2fcbdf55-5cd1-43d1-b903-93bcf83238d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2fcbdf55-5cd1-43d1-b903-93bcf83238d4"
       },
       "source": [
         "print(\"My favorite number is {}\".format(17))  # The .format \"method\" substitutes 17 for {}"
@@ -364,10 +364,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "-XwFB1SBuXdo",
-        "outputId": "c7241d0b-d3b2-47c3-c03a-62e32284171c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c7241d0b-d3b2-47c3-c03a-62e32284171c"
       },
       "source": [
         "print(\"{} + {} = {}\".format(13,12,13+12))"
@@ -396,10 +396,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "IVmzfGzsuXdo",
-        "outputId": "c510c5e3-c267-4780-e69c-a6347d26a7d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c510c5e3-c267-4780-e69c-a6347d26a7d2"
       },
       "source": [
         "print (\"The number {} comes before {}.\".format(1,2)) # This should be familiar.\n",
@@ -433,10 +433,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "cDQWP_m4uXdo",
-        "outputId": "55c25c9e-07ad-48b7-c9d9-a682bf6ac64f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "55c25c9e-07ad-48b7-c9d9-a682bf6ac64f"
       },
       "source": [
         "print(\"pi is approximately {0}\".format(3.14159265))\n",
@@ -469,11 +469,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "WI4b7-z6uXdp",
-        "outputId": "5afacedd-288d-45ce-e0b7-13bcefbdd4d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 266
-        }
+        },
+        "outputId": "5afacedd-288d-45ce-e0b7-13bcefbdd4d1"
       },
       "source": [
         "print(\"{:d} is a pretty big integer.\".format(2**100)) # d is the formatting code for integers.\n",
@@ -544,10 +544,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "J_WzLsqwuXdp",
-        "outputId": "a9c945df-4b2c-4f00-de1a-e5c0c27c803f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "260f8d3f-2530-435c-9082-67d806aa4dfc"
       },
       "source": [
         "#  Use this space to work on the Exercises.  \n",
@@ -577,12 +577,12 @@
         "print(\"4. Using .replace() gives us --> \\'Python\\'\".replace(\"yth\",\"arag\"))\n",
         "\n",
         "print(\"5. % changes a decimal into a percentage, and E changes a number into scientific notation.\")\n",
-        "print(\"--> (%, E) => ({0:%}, {0:E})\".format(.712))\n",
+        "print(\"--> (.712) ==> (%, E) ==> ({0:%}, {0:E})\".format(.712))\n",
         "\n",
         "print(\"6. I may want a function with no arguments if I wanted to use that function to give me a specific real value. \\n-->For example, a function that uses Machin's method for pi where an input value is not needed and would be \\ndisregarded entirely.\")\n",
         "\n"
       ],
-      "execution_count": 59,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
@@ -593,7 +593,7 @@
             "3. 3! = 6.\n",
             "4. Using .replace() gives us --> 'Paragon'\n",
             "5. % changes a decimal into a percentage, and E changes a number into scientific notation.\n",
-            "--> (%, E) => (71.200000%, 7.120000E-01)\n",
+            "--> (.712) ==> (%, E) ==> (71.200000%, 7.120000E-01)\n",
             "6. I may want a function with no arguments if I wanted to use that function to give me a specific real value. \n",
             "-->For example, a function that uses Machin's method for pi where an input value is not needed and would be \n",
             "disregarded entirely.\n"
