--- a/P4M_Notebook_2.ipynb
+++ b/P4M_Notebook_2.ipynb
@@ -75,7 +75,7 @@
         "    answer = x * x\n",
         "    return answer"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
       "source": [
         "from dis import dis"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
       "source": [
         "dis(square)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +152,7 @@
       "source": [
         "square(12)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -178,7 +178,7 @@
       "source": [
         "square(1.5)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -235,7 +235,7 @@
         "    remainder = a % b #\n",
         "    print(\"{} = {} ({}) + {}\".format(a,quotient,b,remainder))"
       ],
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -259,7 +259,7 @@
       "source": [
         "dis(display_divmod)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +313,7 @@
       "source": [
         "display_divmod(23,5)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +349,7 @@
       "source": [
         "print(\"My favorite number is {}\".format(17))  # The .format \"method\" substitutes 17 for {}"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -372,7 +372,7 @@
       "source": [
         "print(\"{} + {} = {}\".format(13,12,13+12))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -407,7 +407,7 @@
         "print (\"The number {1} comes before {1}.\".format(1,2)) # Got it now?\n",
         "\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -443,7 +443,7 @@
         "print(\"pi is approximately {0:f}\".format(3.14159265)) # The \"f\" in \"0:f\" formats the float.\n",
         "print(\"pi is approximately {0:0.3f}\".format(3.14159265)) # Choose 3 digits of precision.\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,7 +482,7 @@
         "print(\"{:s} is a string.\".format('Hi there!')) # s is the formatting code for strings.\n",
         "print(\"{:d} will give us an error message.\".format(1/7)) #error since 1/7 is not an integer (d).\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,7 +547,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "260f8d3f-2530-435c-9082-67d806aa4dfc"
+        "outputId": "804fa389-33df-45b5-c439-6e03b47b5222"
       },
       "source": [
         "#  Use this space to work on the Exercises.  \n",
@@ -579,10 +579,10 @@
         "print(\"5. % changes a decimal into a percentage, and E changes a number into scientific notation.\")\n",
         "print(\"--> (.712) ==> (%, E) ==> ({0:%}, {0:E})\".format(.712))\n",
         "\n",
-        "print(\"6. I may want a function with no arguments if I wanted to use that function to give me a specific real value. \\n-->For example, a function that uses Machin's method for pi where an input value is not needed and would be \\ndisregarded entirely.\")\n",
+        "print(\"6. I may want a function with no arguments if I wanted to use that function to give me a specific real value. \\n--> For example, a function that uses Machin's method for pi where an input value is not needed and would be \\ndisregarded entirely.\")\n",
         "\n"
       ],
-      "execution_count": 63,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,7 +595,7 @@
             "5. % changes a decimal into a percentage, and E changes a number into scientific notation.\n",
             "--> (.712) ==> (%, E) ==> (71.200000%, 7.120000E-01)\n",
             "6. I may want a function with no arguments if I wanted to use that function to give me a specific real value. \n",
-            "-->For example, a function that uses Machin's method for pi where an input value is not needed and would be \n",
+            "--> For example, a function that uses Machin's method for pi where an input value is not needed and would be \n",
             "disregarded entirely.\n"
           ]
         }
@@ -710,19 +710,34 @@
         "def is_even(n):\n",
         "    return (n%2 == 0)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qJVILvBfuXdr"
+        "id": "qJVILvBfuXdr",
+        "outputId": "eb9129e5-916c-47e2-8c96-6de166086f17",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "is_even(17)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -752,7 +767,7 @@
         "            return False\n",
         "    return True"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -767,24 +782,61 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LSjrO41kuXdr"
+        "id": "LSjrO41kuXdr",
+        "outputId": "ec47dbb3-bd1a-4d4c-e54d-fa028011d4a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "is_prime(91)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7 is a factor of 91.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "478jwHBwuXdr"
+        "id": "478jwHBwuXdr",
+        "outputId": "edecb842-bbcb-441d-beee-1d34e40308e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "is_prime(101)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -799,13 +851,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5QVw3Xy8uXds"
+        "id": "5QVw3Xy8uXds",
+        "outputId": "1e71bf6c-66e9-412b-8f32-26e73d1dce44",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Experiment with is_prime here.\n"
+        "# Experiment with is_prime here.\n",
+        "print(\"--> 4 digit number 1235 is prime? {}\".format(is_prime(1235)))\n",
+        "print(\"--> 5 digit number 12347 is prime? {}\".format(is_prime(12347)))\n",
+        "print(\"--> 6 digit number 123459 is prime? {}\".format(is_prime(123459)))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 is a factor of 1235.\n",
+            "--> 4 digit number 1235 is prime? False\n",
+            "--> 5 digit number 12347 is prime? True\n",
+            "3 is a factor of 123459.\n",
+            "--> 6 digit number 123459 is prime? False\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -840,13 +911,99 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l5IQH9hxuXds"
+        "id": "l5IQH9hxuXds",
+        "outputId": "d4cf3ddf-7530-4a4f-de4c-f8c1f11d62d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "#  Use this space for your solutions to the questions.\n"
+        "#  Use this space for your solutions to the questions.\n",
+        "\n",
+        "def my_abs(x):\n",
+        "  if x < 0:\n",
+        "    return -x\n",
+        "  else:\n",
+        "    return x\n",
+        "  \n",
+        "number=-4\n",
+        "print(\"1. The absolute value of {} is {}\".format(number, my_abs(number)))\n",
+        "\n",
+        "def is_prime(n):\n",
+        "    if n > 100000000: #modified section\n",
+        "      print(\"Number is too big\")\n",
+        "      return None\n",
+        "    else: \n",
+        "      for j in range(2,n):  # the list of numbers 2,3,...,n-1.\n",
+        "        if n%j == 0:  # is n divisible by j?\n",
+        "          print(\"{} is a factor of {}.\".format(j,n))\n",
+        "          return False\n",
+        "        return True\n",
+        "\n",
+        "print(\"2. \", end=\"\")\n",
+        "\n",
+        "#input\n",
+        "n = 500000000\n",
+        "\n",
+        "#output\n",
+        "is_prime(n)\n",
+        "\n",
+        "#function\n",
+        "def thrarity(n):\n",
+        "  if n % 3 == 0:\n",
+        "    return\"threeven\"\n",
+        "  elif n % 3 == 1:\n",
+        "    return \"throdd\"\n",
+        "  else:\n",
+        "    return \"thrugly\"\n",
+        "\n",
+        "#input\n",
+        "a = 31; b = 44; c = 60\n",
+        "\n",
+        "#output code\n",
+        "print(\"3. {} is {}. {} is {}. {} is {}\".format(a, thrarity(a), b, thrarity(b), c, thrarity(c)))\n",
+        "\n",
+        "#function\n",
+        "def sum_of_squares(n):\n",
+        "  x2 = y2 = 0\n",
+        "  for i in range(n):\n",
+        "    x2 = n-(i+1)\n",
+        "    if sqrt(x2)%1 == 0:\n",
+        "      y2 = (i+1)\n",
+        "      if sqrt(y2)%1 == 0:\n",
+        "        return int(sqrt(x2)), int(sqrt(y2))\n",
+        "    else:\n",
+        "      return None\n",
+        "\n",
+        "#input value\n",
+        "input = 10\n",
+        "\n",
+        "#output code\n",
+        "if sum_of_squares(input) != None:\n",
+        "  print(\"4. The values of (x, y) for x^2+y^2={} are {}\".format(input, sum_of_squares(input)))\n",
+        "else:\n",
+        "  print(\"4. There are no values of x and y such that x^2+y^2={}.\".format(input))\n",
+        "\n",
+        "\n",
+        "print(\"5.\")\n",
+        "\n",
+        "\n",
+        "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1. The absolute value of -4 is 4\n",
+            "2. Number is too big\n",
+            "3. 31 is throdd. 44 is thrugly. 60 is threeven\n",
+            "4. The values of (x, y) for x^2+y^2=10 are (3, 1)\n",
+            "5.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
